data/derived/comb/progs/unify/prog3945.ml.out
Characters 109-111:
  | ([h1::t1],[h2::t2]) -> if t1 + t2 > 9 then [t1+t2]
                              ^^
Error: This expression has type 'a list
       but an expression was expected of type int
